# hadrian

./: .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: pytests.yml
hadrian/: __init__.py  hadrian.py
hadrian/cli/: hadrianalyze.py
tests/: .coveragerc  test_block_averaging.py
