[project]

name = "hadrian"
requires-python = ">=3.11"
dependencies = [ "numpy", "matplotlib" ]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.scripts]
    hadrianalyze = "hadrian.cli.hadrianalyze:main"

[tool.setuptools.packages.find]
    exclude = [ "tests", "build*" ]

[tool.setuptools.dynamic]
version = {attr  = "hadrian.__version__"}
